--- a/whoogle-search.yaml
+++ b/whoogle-search.yaml
@@ -1,7 +1,7 @@
 package:
   name: whoogle-search
   version: 0.8.3
-  epoch: 0
+  epoch: 1
   description: "A self-hosted, ad-free, privacy-respecting metasearch engine."
   copyright:
     - license: MIT
@@ -42,9 +42,9 @@ pipeline:
       mkdir -p "${{targets.destdir}}"/etc/default
 
       # Using upstream instruction
-      python3 -m venv venv
+      python -m venv venv
       source venv/bin/activate
-      pip install -r requirements.txt
+      # pip install -r requirements.txt
 
       # Cleanup
       rm -r docs test .dockerignore .gitignore .replit docker-compose.yml Dockerfile heroku.yml MANIFEST.in README.md requirements.txt .git
@@ -66,4 +66,4 @@ pipeline:
       cp whoogle-search/whoogle.conf "${{targets.destdir}}"/usr/lib/sysusers.d/whoogle.conf
       cp whoogle-search/whoogle.bin "${{targets.destdir}}"/usr/bin/whoogle-search
 
-  - uses: strip
+  #- uses: strip
